--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@ my_units - backup.csv
 
 raw datasets/not in use/
 raw datasets/models/
+raw datasets/AIMS*
+raw datasets/ELI01*
+raw datasets/IDCJDW
