Modified keras classifier to do binary classification - whether a string is a property or unit. Created a training set for this classifier. The nn_just_predict() method is bugged but nn_train_predict() works

--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,9 @@ __pycache__/
 .idea/
 my_measurements - backup.csv
 my_units - backup.csv
-
 raw datasets/not in use/
 raw datasets/models/
 raw datasets/AIMS*
 raw datasets/ELI01*
 raw datasets/IDCJDW*
+cnb_*
