--- a/requirements.txt
+++ b/requirements.txt
@@ -46,7 +46,7 @@ Pygments==2.4.0
 python-dateutil==2.8.0
 python-docx==0.8.10
 pytz==2019.1
-pywin32==224
+#pywin32==224
 PyYAML==5.1
 requests==2.21.0
 scikit-learn==0.20.3
